--- a/snowflake-ui/package.json
+++ b/snowflake-ui/package.json
@@ -51,6 +51,7 @@
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-ellipsis-text": "^1.2.1",
     "react-helmet": "^6.1.0",
@@ -66,11 +67,11 @@
     "@types/node": "^12.20.0",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "arweave-deploy": "^1.9.1",
     "gh-pages": "^3.1.0",
     "prettier": "^2.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
     "tslint": "^6.1.3"
   },
   "eslintConfig": {
