--- a/snowflake-ui/package.json
+++ b/snowflake-ui/package.json
@@ -66,12 +66,13 @@
     "@types/node": "^12.20.0",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "arweave-deploy": "^1.9.1",
     "gh-pages": "^3.1.0",
     "prettier": "^2.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "usehooks-ts": "^1.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
