--- a/snowflake-ui/package.json
+++ b/snowflake-ui/package.json
@@ -55,6 +55,7 @@
     "react-ellipsis-text": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-js-cron": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.4.2"
