--- a/snowflake-operator/package.json
+++ b/snowflake-operator/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.17.0"
+        "@project-serum/anchor": "^0.17.0",
+        "node-cron": "^3.0.0"
     }
 }
