--- a/snowflake-ui/package.json
+++ b/snowflake-ui/package.json
@@ -50,12 +50,14 @@
     "eventemitter3": "^4.0.7",
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
+    "prettycron": "^0.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ellipsis-text": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-js-cron": "^1.2.1",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.4.2"
