--- a/snowflake-ui/package.json
+++ b/snowflake-ui/package.json
@@ -47,6 +47,8 @@
     "bs58": "^4.0.1",
     "buffer-layout": "^1.2.0",
     "craco-less": "^1.17.0",
+    "cron-converter": "^1.0.1",
+    "deep-equal": "^2.0.5",
     "eventemitter3": "^4.0.7",
     "jazzicon": "^1.5.0",
     "lodash": "^4.17.21",
@@ -59,7 +61,9 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "^4.4.2"
+    "timezone-js": "^0.4.13",
+    "typescript": "^4.4.2",
+    "tzdata": "^1.0.29"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
