snowflake sdk first version

--- a/snowflake-sdk/tsconfig.json
+++ b/snowflake-sdk/tsconfig.json
@@ -9,10 +9,12 @@
       "node_modules/@types"
     ],
     "types": [
-      "node"
+      "node", "@types/jest"
     ],
     "esModuleInterop": true,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "strictPropertyInitialization" : false,
+    "resolveJsonModule": true
   },
   "include": ["src"]
 }
