--- a/snowflake-sdk/package.json
+++ b/snowflake-sdk/package.json
@@ -1,19 +1,22 @@
 {
     "scripts": {
-        "start": "ts-node src/snow-operator.ts",
-        "build": "rm -rf dist/ && tsc && cp package.json.prod dist/package.json && cp log4js.json dist/",
-        "package-lambda": "cd dist/ && zip -r function.zip ../idl ../keys ../node_modules index.js snow-service.js",
-        "deploy-lambda": "aws lambda update-function-code --function-name snowflake-operator --zip-file fileb://dist/function.zip",
-        "package-app": "cd dist/ && zip -r snow-operator.zip package.json log4js.json ../idl snow-operator.js snow-service.js"
+        "test": "jest"
     },
     "dependencies": {
-        "@project-serum/anchor": "^0.17.0",
+        "@project-serum/anchor": "^0.21.0",
+        "@solana/web3.js": "^1.22.0",
         "log4js": "^6.3.0",
-        "node-cron": "^3.0.0",
-        "@solana/web3.js": "^1.22.0"
+        "node-cron": "^3.0.0"
     },
     "devDependencies": {
+        "@types/jest": "^27.4.0",
         "@types/node": "^16.11.10",
-        "@types/node-cron": "^3.0.0"
+        "@types/node-cron": "^3.0.0",
+        "dotenv": "^16.0.0",
+        "jest": "^27.5.1",
+        "nyc": "^15.1.0",
+        "ts-jest": "^27.1.3",
+        "ts-node": "^10.5.0",
+        "typescript": "^4.5.5"
     }
 }
