--- a/snowflake-ui/tsconfig.json
+++ b/snowflake-ui/tsconfig.json
@@ -17,7 +17,8 @@
     "noEmit": true,
     "typeRoots": ["./types", "./node_modules/@types"],
     "jsx": "react",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "strictPropertyInitialization" : false
   },
   "include": ["src"]
 }
