--- a/snowflake-sdk/package.json
+++ b/snowflake-sdk/package.json
@@ -9,7 +9,7 @@
     },
     "devDependencies": {
         "@types/jest": "^27.4.0",
-
+        "buffer-layout": "^1.2.2",
         "dotenv": "^16.0.0",
         "jest": "^27.5.1",
         "ts-jest": "^27.1.3",
