feature (sdk) implement findByOwner (SF-56)

--- a/snowflake-sdk/package.json
+++ b/snowflake-sdk/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "@types/jest": "^27.4.0",
+        "@types/mocha": "^9.1.0",
         "buffer-layout": "^1.2.2",
         "dotenv": "^16.0.0",
         "jest": "^27.5.1",
