--- a/snowflake-sdk/.env
+++ b/snowflake-sdk/.env
@@ -1,2 +1,2 @@
-ANCHOR_WALLET="/Users/tam/.config/solana/id.json"
-ANCHOR_PROVIDER_URL="http://localhost:8899"
+ANCHOR_WALLET="/Users/chungquantin/new-keypair.json"
+ANCHOR_PROVIDER_URL="https://api.devnet.solana.com"
