--- a/snowflake-rust/programs/snowflake/Cargo.toml
+++ b/snowflake-rust/programs/snowflake/Cargo.toml
@@ -16,9 +16,7 @@ default = []
 
 [dependencies]
 anchor-lang = "0.21.0"
+anchor-spl = "0.21.0"
+spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
 bs58 = "0.3.1"
 thiserror = "1.0.20"
-
-[dependencies.spl-token]
-version = "3.1.1"
-features = ["no-entrypoint"]
