--- a/snowflake-rust/programs/snowflake/Cargo.toml
+++ b/snowflake-rust/programs/snowflake/Cargo.toml
@@ -20,3 +20,4 @@ anchor-spl = "0.21.0"
 spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
 bs58 = "0.3.1"
 thiserror = "1.0.20"
+snowutil = { path = "../snow-util", version = "0.1.0" }
