extract scheduler and operator consensus code to another module, use safe calculation methods

--- a/snowflake-rust/programs/snow-util/Cargo.toml
+++ b/snowflake-rust/programs/snow-util/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "snowutil"
+name = "snow_util"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2018"
-
-[lib]
-name = "snowutil"
 
 [dependencies]
 anchor-lang = "0.21.0"
