--- a/snowflake-operator/package.json
+++ b/snowflake-operator/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "start": "ts-node src/snow-operator.ts",
+        "test": "jest",
         "build": "rm -rf dist/ && tsc && cp package.json.prod dist/package.json && cp log4js.json dist/",
         "package-lambda": "cd dist/ && zip -r function.zip ../idl ../keys ../node_modules index.js snow-service.js",
         "deploy-lambda": "aws lambda update-function-code --function-name snowflake-operator --zip-file fileb://dist/function.zip",
@@ -8,11 +9,22 @@
     },
     "dependencies": {
         "@project-serum/anchor": "^0.21.0",
+        "@types/bluebird": "^3.5.36",
+        "@types/sqlite3": "^3.1.8",
+        "bluebird": "^3.7.2",
+        "dotenv": "^16.0.0",
         "log4js": "^6.3.0",
-        "node-cron": "^3.0.0"
+        "node-cron": "^3.0.0",
+        "sqlite3": "^5.0.2",
+        "ts-node": "^10.5.0",
+        "typescript": "^4.5.5"
     },
     "devDependencies": {
+        "@types/jest": "^27.4.1",
+        "@types/mocha": "^9.1.0",
         "@types/node": "^16.11.10",
-        "@types/node-cron": "^3.0.0"
+        "@types/node-cron": "^3.0.0",
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.3"
     }
 }
