--- a/snowflake-operator/tsconfig.json
+++ b/snowflake-operator/tsconfig.json
@@ -5,14 +5,12 @@
     "outDir": "./dist",
     "strict": true,
     "baseUrl": "./",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "node"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node", "@types/jest", "jest"],
     "esModuleInterop": true,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "strictPropertyInitialization": false,
+    "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
