--- a/snowflake-sdk/tsconfig.json
+++ b/snowflake-sdk/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
+    "declaration": true,
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
@@ -12,5 +13,5 @@
     "strictPropertyInitialization": false,
     "resolveJsonModule": true
   },
-  "include": ["src", "test"]
+  "include": ["src"]
 }
