--- a/snowflake-operator/tsconfig.json
+++ b/snowflake-operator/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "outDir": "./dist",
+    "outDir": "./js",
     "strict": true,
     "baseUrl": "./",
     "typeRoots": ["node_modules/@types"],
