--- a/snowflake-cli/package.json
+++ b/snowflake-cli/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@snowflake-so/snowflake-sdk": "^1.0.6",
+    "@types/bluebird": "^3.5.36",
     "@types/inquirer": "^8.2.0",
-    "inquirer": "^8.2.0",
+    "@types/level": "^6.0.0",
+    "bluebird": "^3.7.2",
+    "commander": "^9.0.0",
+    "level": "^7.0.1",
     "ts-node": "^10.5.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
