--- a/snowflake-sdk/src/idl/snowflake.json
+++ b/snowflake-sdk/src/idl/snowflake.json
@@ -83,7 +83,7 @@
         },
         {
           "name": "pda",
-          "isMut": false,
+          "isMut": true,
           "isSigner": false
         },
         {
@@ -114,7 +114,7 @@
         },
         {
           "name": "pda",
-          "isMut": false,
+          "isMut": true,
           "isSigner": false
         },
         {
@@ -145,7 +145,7 @@
         },
         {
           "name": "pda",
-          "isMut": false,
+          "isMut": true,
           "isSigner": false
         },
         {
