--- a/snowflake-cli/package.json
+++ b/snowflake-cli/package.json
@@ -4,18 +4,24 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@snowflake-so/snowflake-sdk": "^1.0.6",
-    "@types/bluebird": "^3.5.36",
-    "@types/inquirer": "^8.2.0",
-    "@types/level": "^6.0.0",
+    "@project-serum/anchor": "^0.21.0",
+    "@snowflake-so/snowflake-sdk": "^1.0.7",
+    "@solana/web3.js": "^1.22.0",
     "bluebird": "^3.7.2",
     "commander": "^9.0.0",
+    "dotenv": "^16.0.0",
+    "esm": "^3.2.25",
     "level": "^7.0.1",
-    "ts-node": "^10.5.0",
+    "ora": "^6.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/bluebird": "^3.5.36",
+    "@types/inquirer": "^8.2.0",
+    "@types/level": "^6.0.0",
+    "ts-node": "^10.5.0"
+  },
   "scripts": {
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
