--- a/snowflake-cli/package.json
+++ b/snowflake-cli/package.json
@@ -14,6 +14,7 @@
     "level": "^7.0.1",
     "ora": "^6.1.0",
     "tslint": "^6.1.3",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
