--- a/snowflake-cli/package.json
+++ b/snowflake-cli/package.json
@@ -11,6 +11,7 @@
     "commander": "^9.0.0",
     "dotenv": "^16.0.0",
     "esm": "^3.2.25",
+    "inquirer": "^8.2.0",
     "level": "^7.0.1",
     "ora": "^6.1.0",
     "tslint": "^6.1.3",
