add test folder to tsconfig.json

--- a/snowflake-sdk/tsconfig.json
+++ b/snowflake-sdk/tsconfig.json
@@ -13,5 +13,5 @@
     "strictPropertyInitialization": false,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
