feature (cli) add database

--- a/snowflake-sdk/.env
+++ b/snowflake-sdk/.env
@@ -1,2 +1,2 @@
-ANCHOR_WALLET="/Users/{user}/.config/solana/id.json"
+ANCHOR_WALLET="/Users/chungquantin/snf-1.json"
 ANCHOR_PROVIDER_URL="https://api.devnet.solana.com"
