--- a/snowflake-cli/package.json
+++ b/snowflake-cli/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Snowflake CLI to interact with Snowflake SDK",
   "main": "bin/index.js",
-  "bin": "bin/index.js",
+  "bin": {
+    "snowflake": "bin/index.js"
+  },
   "dependencies": {
     "@project-serum/anchor": "^0.21.0",
     "@snowflake-so/snowflake-sdk": "^1.0.7",
@@ -32,6 +34,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "snowflake-so",
   "license": "ISC"
 }
