--- a/snowflake-cli/package.json
+++ b/snowflake-cli/package.json
@@ -13,18 +13,22 @@
     "bluebird": "^3.7.2",
     "commander": "^9.0.0",
     "dotenv": "^16.0.0",
-    "esm": "^3.2.25",
-    "inquirer": "^8.2.0",
     "level": "^7.0.1",
-    "ora": "^6.1.0",
-    "tslint": "^6.1.3",
-    "tslint-eslint-rules": "^5.4.0",
+    "eslint": "^8.10.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
     "@types/inquirer": "^8.2.0",
     "@types/level": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "^37.9.7",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^41.0.0",
     "ts-node": "^10.5.0"
   },
   "scripts": {
